added update post functions
